Avoid flash of invisible text

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
   font-family: "Recursive";
   font-weight: 300 1000;
+  font-display: swap;
   src: url("/fonts/Recursive_VF.woff2") format("woff2-variations");
 }
